Don't set AncestorHasDirAuto when binding a <bdi> element to the tree. Bug 815043, r=peterv